# mina

./: .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  settings.gradle
agent_service/: config.example.json  pyproject.toml
agent_service/data/knowledge/: mina_system.md  server_rules.md
agent_service/data/knowledge/local/: server_rules.json
agent_service/data/knowledge/manifests/: changelogs.json  wiki_roots.json
agent_service/src/mina_agent/: __init__.py  config.py  main.py  schemas.py
agent_service/src/mina_agent/api/: __init__.py  app.py
agent_service/src/mina_agent/app_server/: __init__.py  command_runner.py  server.py
agent_service/src/mina_agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_service/tests/: test_app_and_cli.py  test_app_server_protocol.py  test_companion_evaluator.py  test_context_manager_prompt_rules.py  test_debug_trace.py  test_headless_cli.py  test_headless_real_smoke.py  test_headless_scenarios.py  test_headless_smoke.py  test_knowledge_service.py  test_knowledge_sources.py  test_memory_citations.py  test_memory_pipeline.py  test_runtime_refactor.py  test_turn_service_helpers.py  test_wiki_store.py
config/: mina.properties.example
mc_wiki/: .gitignore  README.md  config.yaml  pyproject.toml
mc_wiki/docs/: MC_AI_AGENT_INTEGRATION.md
mc_wiki/src/: __init__.py  checkpoint.py  client.py  crawler.py  main.py  models.py  parser.py  storage.py  utils.py
mc_wiki/tests/: conftest.py  test_checkpoint.py  test_client.py  test_crawler.py  test_main.py  test_parser.py  test_storage.py
(+197 files in other folders)
