[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mina-agent-service"
version = "0.1.0"
description = "External Python runtime for Mina (Minecraft Navigator)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0"
]

[project.scripts]
mina-knowledge = "mina_agent.knowledge.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
